tests/ui/consts/const-eval/issue-49296.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/issue-49296.rs:9:16
   |
LL | const X: u64 = *wat(42);
   |                ^^^^^^^^ memory access failed: ALLOC0 has been freed, so this pointer is dangling

note: erroneous constant encountered
  --> $DIR/issue-49296.rs:13:20
   |
LL |     println!("{}", X);
   |                    ^

note: erroneous constant encountered
  --> $DIR/issue-49296.rs:13:20
   |
LL |     println!("{}", X);
   |                    ^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

note: erroneous constant encountered
  --> $DIR/issue-49296.rs:13:20
   |
LL |     println!("{}", X);
   |                    ^
   |
   = note: this note originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
  --> $DIR/issue-49296.rs:13:20
   |
LL |     println!("{}", X);
   |                    ^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
   = note: this note originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
